hubble/bases/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`hubble-ui.jed.local`)
    services:
    - name: hubble-ui
      port: 80
  tls:
    secretName: hubble-ingress

#---

#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRouteTCP
#metadata:
#  name: hubble-api-ingress
#  namespace: kube-system
#  annotations:
#    kubernetes.io/ingress.class: traefik
#spec:
#  entryPoints:
#    - dashboard
#  routes:
#  - match: HostSNI(`hubble.jed.local`)
#    services:
#    - name: hubble-relay
#      port: 80
#  tls:
#    passthrough: false
#    secretName: hubble-ingress
